# AnisotropicElastoplasticity

./: .ccls  .gitignore  CMakeLists.txt  Impl.py  README.md  case.py  taichi.py  unit.py  zhihu.py
AnisotropicElastoplasticity/: CMakeLists.txt  HybridSolver.cpp  LagrangianMesh.cpp  Makefile  RegularGrid.h
